--- a/src/sass/_headerStyles.scss
+++ b/src/sass/_headerStyles.scss
@@ -3,7 +3,7 @@
 
 .name {
 
-    font-family: 'Water Brush', cursive;
-    font-size: 70px;
+    font-family:var(--ff-name);
+    font-size: 4.375rem;
 
 }
