--- a/src/sass/_introStyles.scss
+++ b/src/sass/_introStyles.scss
@@ -1,6 +1,118 @@
-nav{
-    display: none;
+
+header{
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
 }
+nav {
+    position: fixed;
+    background: var(--clr-dark);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+
+}
+.nav__list{
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+.nav__link{
+    font-size: var(--fs-h3);
+    font-weight:var(--fw-bold);
+}
+.nav__link:hover{
+    color: var(--clr-light);
+    
+    
+}
+.logo{
+    max-width: 100px;
+    width: 100px;
+    height: 100px;
+}
+.nav-toggle{
+    align-self: flex-start;
+    padding: .5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 1000;
+}
+
+.nav__open .nav{
+    // background: red;
+    transform: translateX(0);
+
+}
+.nav__open .nav-toggle{
+    position:fixed;
+}
+.nav__open .hamburger{
+    transform: rotate(.625turn);
+}
+.nav__open .hamburger::before{
+    transform: rotate(90deg) translateX(-6px);
+}
+.nav__open .hamburger::after{
+    opacity: 0;
+}
+
+
+
+
+.hamburger{
+    // border: 2px solid tomato;
+    position: relative;
+    display: block;
+}
+.hamburger,
+.hamburger::before,
+.hamburger::after{
+    background: var(--clr-custom);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transfrom 250ms ease-in-out;
+}
+.hamburger::before{
+    top: 6px;
+}
+.hamburger::after{
+    bottom: 6px;
+}
+
+
+.hamburger::before,
+.hamburger::after{
+    content:'';
+    position: absolute;
+    left: 0;
+    right:0;
+    background: var(--clr-custom);
+}
+
+
+
+
+
+
+
+
+
+
+
 
 .intro{
     position: relative;
